--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_massage">Hello World</string>
     <string name="ButtonText">I\’m a button</string>
+    <string name="Login">Login</string>
+    <string name="Hint">Login Name</string>
+    <string name="Password">Password</string>
+    <string name="RadioButton">RadioButton</string>
+    <string name="CheckBox">CheckBox</string>
+    <string name="Switch">What does this do?</string>
+
 </resources>
