--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_massage">नमस्ते दुनिया</string>
     <string name="ButtonText">मैं एक बटन </string>
     <string name="Login"> प्रयोक्ता </string>
-    <string name="Hint"> प्रयोक्ता नाम </string>
+    <!--<string name="Hint"> प्रयोक्ता नाम </string>-->
 
 
 </resources>
