--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="ButtonText">I\’m a button</string>
     <string name="Login">Login</string>
     <string name="Hint">Login Name</string>
+    <!--<string name="Hint">Login Name</string>-->
     <string name="Password">Password</string>
     <string name="RadioButton">RadioButton</string>
     <string name="CheckBox">CheckBox</string>
